--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ h2, .secondary-text {
     width: 50%;
     padding-top: 20px;
     padding-bottom: 20px;
-    background-color: #1F2937;
+    background-color: #3882f6;
     border-radius: 10px;
 }
 
@@ -172,4 +172,13 @@ h2, .secondary-text {
     text-decoration: none;
     border-radius: 10px;
     padding: 8px;
+}
+
+.copyright {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1F2937;
+    color: white;
+    padding: 20px;
 }
